fix english header and spacing in list stats

--- a/src/components/PokeCard/PokeCard.css
+++ b/src/components/PokeCard/PokeCard.css
@@ -207,7 +207,7 @@
 
   justify-content: space-around;
 
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.75rem;
 }
 
 .bar-stats {
